# rust-weather-api

./: Cargo.toml  Dockerfile  data.json  data.txt
src/: main.rs  types.rs
